[metadata]
name = routeparser
author = Brandon M. Pace
author_email = brandonmpace@gmail.com
license = LGPL-3.0-or-later
description = A route command output text parser
keywords = network, route, parser
url = https://github.com/brandonmpace/routeparser
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
platforms = any

[options]
packages = find:
python_requires = >=3.6.5
